// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions: Global alerts clear alert should dispatch the correct action 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "alert_1",
    },
    "type": "CLEAR_GLOBAL_ALERT",
  },
]
`;

exports[`Actions: Global alerts show alert should dispatch the correct action 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "a message",
      "type": "success",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;

exports[`Actions: Global alerts show alert should dispatch the correct action without type 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "a message",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;

exports[`Actions: Global alerts suspension alerts should dispatch a suspended for billing suspension alert 1`] = `
Array [
  Object {
    "payload": Object {
      "dedupeId": "SUSPENSION_NOTICE",
      "details": <span>
        To make a payment and reactivate your account, 
        <Link
          replace={false}
          to="/account/billing"
        >
          visit the billing page
        </Link>
        .
      </span>,
      "maxWidth": 800,
      "message": "This account is currently suspended for billing",
      "type": "warning",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;

exports[`Actions: Global alerts suspension alerts should dispatch the default suspension alert 1`] = `
Array [
  Object {
    "payload": Object {
      "dedupeId": "SUSPENSION_NOTICE",
      "details": <span>
        For more information about account suspension, please email 
        <a
          href="mailto:compliance@sparkpost.com"
        >
          compliance@sparkpost.com
        </a>
      </span>,
      "maxWidth": 800,
      "message": "This account is currently suspended",
      "type": "warning",
    },
    "type": "SHOW_GLOBAL_ALERT",
  },
]
`;
